Fri Oct 24 18:29:14 2008  Søren Sandmann  <sandmann@redhat.com>

	* capplet-util.c: Call g_option_context_set_translation_domain on
	the context.

Fri Oct 24 18:22:06 2008  Søren Sandmann  <sandmann@redhat.com>

	* capplet-util.[ch]: Add new capplet_init() function

Fri Oct 24 17:21:56 2008  Søren Sandmann  <sandmann@redhat.com>

	* capplet-stock-icons.c (capplet_register_stock_icons): Get rid of
	gnome_program_locate_file()

2008-10-11  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Add CAPPLET_CFLAGS to INCLUDES to make
	it build.

2008-10-11  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf-property-editor.c: (peditor_image_set_filename):
	Fix GCC warnings from -Wformat-security.

2008-09-29  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (read_icon_theme): use translated names for
	icon themes if available (bug #554272)

==================== 2.24.0.1 ====================

2008-09-02  Jens Granseuer  <jensgr@gmx.net>

	* file-transfer-dialog.c: (file_transfer_job_schedule): properly
	initialize the callback data (bug #550263)

2008-08-16  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gtk_theme_info_missing_engine): don't leak
	the theme engine path

2008-08-16  Jens Granseuer  <jensgr@gmx.net>

	Keep track of hidden themes, too, so that e.g. we don't erroneously
	show "GTK theme missing" when a metatheme references a hidden GTK
	theme (part of bug #547301)

	* gnome-theme-info.c: (gnome_theme_read_meta_theme),
	(read_icon_theme), (read_cursor_theme): don't skip hidden themes,
	initialize the hidden property
	(gnome_theme_info_find_all_helper): only return non-hidden themes
	* gnome-theme-info.h: add hidden property to all theme types

2008-08-12  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-apply.c: (gnome_meta_theme_set): make sure we have a
	notification theme before trying to save it (bug #547448)

2008-08-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-apply.c: (gnome_meta_theme_set): if the metatheme loaded