@@ -1,3 +1,8 @@
+Fri Oct 24 18:38:47 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* capplet-util.c (capplet_init): Only call
+	set_translation_domain() if the context is non-NULL
+
 Fri Oct 24 18:29:14 2008  Søren Sandmann  <sandmann@redhat.com>
 
 	* capplet-util.c: Call g_option_context_set_translation_domain on
